--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,5 @@
-Polygon==2.0.1
-TTFQuery==1.0.4
-VPython==6.05
-argparse==1.2.1
-fonttools==2.3
-gnureadline==6.3.3
-ipython==2.3.0
-matplotlib==1.4.2
-mock==1.0.1
-mpmath==0.19
-nose==1.3.4
-numpy==1.9.0
-py==1.4.25
-pyparsing==2.0.3
+py==1.4.26
 pyserial==2.7
-pytest==2.6.3
-python-dateutil==2.2
-pytz==2014.7
-scikit-learn==0.15.2
-scipy==0.14.0
-six==1.8.0
-stevedore==1.0.0
-sympy==0.7.5
-vboxapi==1.0
-virtualenv==1.11.6
-virtualenv-clone==0.2.5
-virtualenvwrapper==4.3.1
+pytest==2.6.4
+tendo==0.2.6
 wsgiref==0.1.2
-wxPython==2.9.4.0
-wxPython-common==2.9.4.0
